--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/Login.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Header.css">
+    <link rel="stylesheet" type="text/css" href="css/Login.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/Header.css">
 </head>
 <body>
     <header class='container header__container'>
@@ -22,12 +22,12 @@
     <section>
         <div class="container login__container">
             <div class="login__left">
-                <img src="images/register.png" alt="image" />
+                <img th:src="@{'photos/register.png'}" alt="image" />
             </div>
             <div class="login__right">
                 <div class="heading__background">
-                    <a href="user_login.html" class='active'><h2>Login</h2></a>
-                    <a href="user_signup.html"><h2>Sign Up</h2></a>
+                    <a th:href="@{/login}" class='active'><h2>Login</h2></a>
+                    <a th:href="@{/register}"><h2>Sign Up</h2></a>
                 </div>
                 <form action="#">
                     <input class='input__box' type="email" placeholder='Email' required/>
