--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -22,16 +22,16 @@
     <section>
         <div class="container login__container">
             <div class="login__left">
-                <img src="images/register.png" alt="image" />
+                <img th:src="@{'/photos/register.png'}" alt="image" />
             </div>
             <div class="login__right">
                 <div class="heading__background">
                     <a href="user_login.html" ><h2>Login</h2></a>
                     <a href="user_signup.html" class='active'><h2>Sign Up</h2></a>
                 </div>
-                <form action="#">
-                    <input class='input__box' type="text`" placeholder='First Name' name="first_name" required/>
-                    <input class='input__box' type="text" placeholder='Last Name'name="last_name" required/>
+                <form th:action="@{/register}" method = "post">
+                    <input class='input__box' type="text`" placeholder='First Name' name="fname" required/>
+                    <input class='input__box' type="text" placeholder='Last Name'name="lname" required/>
                     <input class='input__box' type="email" placeholder='Email' name="email" required/>
                     <input class='input__box' type="number" placeholder='Mobile Number' name="mobile" required/>
                     <input class='input__box' type="password" placeholder='Password' name="password" required/>
