--- a/src/main/resources/templates/documents/upload-document.html
+++ b/src/main/resources/templates/documents/upload-document.html
@@ -9,7 +9,7 @@
 <div class="container">
   <form method="POST" class="mb-3" enctype="multipart/form-data" action="/">
     <label for="formFile" class="form-label">Default file input example</label>
-    <input class="form-control" type="file" id="formFile">
+    <input class="form-control" type="file" id="formFile" name="document">
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
