--- a/src/main/resources/templates/documents/upload-document.html
+++ b/src/main/resources/templates/documents/upload-document.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-  <form method="POST" class="mb-3" enctype="multipart/form-data" action="/">
+  <form method="POST" class="mb-3" enctype="multipart/form-data" th:action="@{/upload-document}">
     <label for="formFile" class="form-label">Default file input example</label>
     <input class="form-control" type="file" id="formFile" name="document">
     <div class="mb-3">
