--- a/bin/src/main/resources/templates/user_login.html
+++ b/bin/src/main/resources/templates/user_login.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/Login.css">
+    <link rel="stylesheet" type="text/css" href="css/LoginSignup.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/Header.css">
+    <link rel="stylesheet" type="text/css" href="css/Footer.css">
 </head>
+
 <body>
     <header class='container header__container'>
         <div>
@@ -26,17 +29,56 @@
             </div>
             <div class="login__right">
                 <div class="heading__background">
-                    <a th:href="@{/login}" class='active'><h2>Login</h2></a>
-                    <a th:href="@{/register}"><h2>Sign Up</h2></a>
+                    <a th:href="@{/login}" class='active'>
+                        <h2>Login</h2>
+                    </a>
+                    <a th:href="@{/register}">
+                        <h2>Sign Up</h2>
+                    </a>
                 </div>
                 <form th:action="@{/login}" method="post">
-                    <input class='input__box' type="email" placeholder='Email' name="email" required/>
-                    <input class='input__box' type="password" placeholder='Password' name="password" required/>
-                    <input class='btn btn__login' type="submit" value='Log In' required/>
+                    <input class='input__box' type="email" placeholder='Email' name="email" required />
+                    <input class='input__box' type="password" placeholder='Password' name="password" required />
+                    <input class='btn btn__login' type="submit" value='Log In' required />
                 </form>
                 <h5 class='forgot__password'><a href="#">Forgot Password?</a></h5>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container footer__container">
+            <div class="first">
+                <h1 class='logo'>Sanolagani</h1>
+                <h5>&copy; all rights are reserved 2023</h5>
+            </div>
+            <div class="second">
+                <h2>About Us</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Our Team</a></li>
+                    <li><a href="#" class='about__link'>Careers</a></li>
+                    <li><a href="#" class='about__link'>Blog</a></li>
+                </ul>
+            </div>
+            <div class="third">
+                <h2>Wrok Together</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Raise Capital</a></li>
+                    <li><a href="#" class='about__link'>Refer a friend</a></li>
+                    <li><a href="#" class='about__link'>Success stories</a></li>
+                    <li><a href="#" class='about__link'>Partnership</a></li>
+                </ul>
+            </div>
+            <div class="fourth">
+                <h2>Need Help</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Contact us</a></li>
+                    <li><a href="#" class='about__link'>Need Help</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
