updated security config

--- a/src/main/resources/templates/documents/table.html
+++ b/src/main/resources/templates/documents/table.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <div>Table name</div>
         <table class="table table-striped" >
         <thead >
         <tr>
@@ -23,6 +24,10 @@
         </tr>
         </tbody>
     </table>
+    <div class="flex">
+        <button type="button" class="btn btn-primary">Previous</button>
+        <button type="button" class="btn btn-secondary">Next</button>
+    </div>
     </div>
 </body>
 </html>
