--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -53,15 +53,18 @@
                 <div>
                     <input class="register_input" type="text" placeholder="Website URL" name="websiteurl">
                     <input class="register_input" type="number" placeholder="Raised Capital"
-                        name="previouslyraisedcapital">
+                        name="raisedcapital">
                 </div>
                 <div>
-                    <input class="register_input register_input_full" type="text" placeholder=" sector" name="sector">
+                    <input class="register_input" type="text" placeholder=" sector" name="sector">
+                    <input class="register_input" type="number" placeholder=" maximum quantity" name="maximum_quantity">
+
 
                 </div>
 
-                <input class="register_input register_input_full" type="text"
+                <input class="register_input register" type="text"
                     placeholder="Time Span For Raising Capital" name="timespanforraisingcapital">
+                    <input class="register_input" type="number" placeholder=" per share price" name="price_per_share">
                 <br>
                 <div class="doc_file">
                     <div>
