--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,40 +1,113 @@
+<!DOCTYPE html>
+<html>
 
-                  <table>
-                    <thead>
-                      <tr >
-                        <th scope="col">
-                        </th>
-                        <th scope="col">id</th>
-                        <th scope="col">first name</th>
-                        <th scope="col">last name</th>
-                        <th scope="col">company name</th>
-                        <th scope="col">phone</th>
-                        <th scope="col">file name</th>
-                        <th scope="col">timespan</th>
-                        <th scope="col">price_per_share</th>
-                        <th scope="col">Amount to be raised</th>
-                        <th scope="col">PAN image name</th>
-                        <th scope="col">Front citizenship image name</th>
-                        <th scope="col">Back citizenship image name</th>
-                        
-                      </tr>
-                    </thead>
-                    <tbody >
-				  <tr th:each="detail: ${UnverfiedCompanies}">
-                        <td scope="col" th:text="${detail.id}" />
-                        <td scope="col" th:text="${detail.fname}" />
-                        <td scope="col" th:text="${detail.lname}" />
-                        <td scope="col" th:text="${detail.companyname}" />
-                        <td scope="col" th:text="${detail.phnum}" />
-                        <td scope="col" th:text="${detail.filename}" />
-                        <td scope="col" th:text="${detail.timespanforraisingcapital}" />
-                        <td scope="col" th:text="${detail.price_per_share}" />
-                       <td scope="col" th:text="${detail.raisedcapital}" />
-                        <td scope="col" th:text="${detail.pan_image_name}" />
-                        <td scope="col" th:text="${detail.citizenship_fname}" />
-                        <td scope="col" th:text="${detail.citizenship_bname}" /> 
-                      </tr>
-           
-                    </tbody>
-                  </table>
-     
+<head>
+    <style>
+        #customers {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        #customers td,
+        #customers th {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        #customers tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        #customers tr:hover {
+            background-color: #ddd;
+        }
+
+        #customers th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: var(--color-blue);
+            color: white;
+        }
+    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/Home.css">
+    <link rel="stylesheet" href="css/Nav.css">
+    <link rel="stylesheet" href="css/company_table.css">
+</head>
+
+
+    <!-- main header -->
+    <header class='container header__container'>
+        <div>
+            <h1><a href="/" class='logo hover_none'>Sanolagani</a> </h1>
+        </div>
+    </header>
+
+    <!-- navigation -->
+    <div class='full__width'>
+        <nav class='container nav__container'>
+            <div class="left">
+                <ul>
+                    <li><a href="/" class="nav__link">Home</a></li>
+                    <li><a href="#" class="nav__link">Start Investing</a></li>
+                    <li><a href="#" class="nav__link">Raise Capital</a></li>
+                    <li><a href="company_registration.html" class="nav__link">Register Company</a></li>
+                    <li><a href="invest.html" class="nav__link">Invest</a></li>
+                </ul>
+            </div>
+
+            <div class="right">
+                <ul>
+                    <li><a href="user_login.html" class="nav__link">Login</a></li>
+                    <li><a href="user_signup.html" class="nav__link">Sign Up</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <!-- table -->
+    <section>
+        
+            <h1>Company Table</h1>
+
+            <table id="customers">
+                <tr>
+                    <th>id</th>
+                    <th>first name</th>
+                    <th>last name</th>
+                    <th>company name</th>
+                    <th>phone</th>
+                    <th>file name</th>
+                    <th>timespan</th>
+                    <th>price_per_share</th>
+                   <!-- <th>Amount to be raised</th>
+                    <th>PAN image name</th>
+                    <th>Front citizenship image name</th>
+                    <th>Back citizenship image name</th> -->
+                </tr>
+                <tr th:each="detail: ${UnverfiedCompanies}">
+                        <td th:text="${detail.id}"/>
+                        <td th:text="${detail.fname}" />
+                        <td th:text="${detail.lname}" />
+                        <td th:text="${detail.companyname}" />
+                        <td th:text="${detail.phnum}" />
+                        <td th:text="${detail.filename}" />
+                        <td th:text="${detail.timespanforraisingcapital}" />
+                        <td th:text="${detail.price_per_share}" />
+                     <!--   <td th:text="${detail.raisedcapital}" />
+                        <td th:text="${detail.pan_image_name}" />
+                        <td th:text="${detail.citizenship_fname}" />
+                        <td th:text="${detail.citizenship_bname}" /> -->
+                        <td><button type="submit" class="btn" th:onclick="|window.location.href='/tables/edit/save/${detail.id}'|">Add</button></td>
+                        <td><button class="btn btn-danger" th:onclick="|window.location.href='/tables/edit/${detail.id}'|">Delete</button></td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+</body>
+
+</html>
