--- a/src/main/resources/templates/otp.html
+++ b/src/main/resources/templates/otp.html
@@ -5,21 +5,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTP</title>
-    <link rel="stylesheet" href="./otp.css">
+    <title>Sanolagani</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Nav.css">
+    <link rel="stylesheet" href="css/Header.css">
+    <link rel="stylesheet" href="css/Home.css">
+    <link rel="stylesheet" href="css/HowToInvest.css">
+    <link rel="stylesheet" href="css/Footer.css">
+    <link rel="stylesheet" href="css/MostMomentum.css">
+    <link rel="stylesheet" href="css/MostFunded.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/otp.css">
 </head>
 
 <body>
-    <section>
+    <!-- main header -->
+    <header class='container header__container'>
+        <div>
+            <h1><a href="/" class='logo hover_none'>Sanolagani</a> </h1>
+        </div>
+    </header>
+
+    <!-- OTP -->
+    <section class="otp__section">
         <div class="container otp__container">
-            <form th:action="@{/otpverify}" method="post">
-                <h2>Enter Your OTP</h2>
-                <input class="otp__input" type="email" placeholder="email" name="email"><br>
-                <input class="otp__input" type="number" placeholder="OTP" name="otp"><br>
-                <input type="submit" class="btn" value="Send">
-            </form>
+            <div class="otp__box">
+                <h2>Validate OTP</h2>
+                <div class="otp">
+                    <hr>
+                    <!-- <p class="error_otp">Invalid OTP</p> -->
+                    <p class="otp_message">
+                        The OTP has been sent to your gmail. Please enter the OTP you received to Validate.
+                    </p>
+
+                    <form th:action="@{/otpverify}" method="post">
+                        <input class="otp__input" type="email" th:placeholder="${email}" name="email" th:value="${email}" hidden readonly>
+                        <input class="otp__input" type="number" placeholder="OTP" name="otp">
+                        <input type="submit" class="btn" value="Validate OTP">
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container footer__container">
+            <div class="first">
+                <h1 class='logo'>Sanolagani</h1>
+                <h5>&copy; all rights are reserved 2023</h5>
+            </div>
+            <div class="second">
+                <h2>About Us</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Our Team</a></li>
+                    <li><a href="#" class='about__link'>Careers</a></li>
+                    <li><a href="#" class='about__link'>Blog</a></li>
+                </ul>
+            </div>
+            <div class="third">
+                <h2>Wrok Together</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Raise Capital</a></li>
+                    <li><a href="#" class='about__link'>Refer a friend</a></li>
+                    <li><a href="#" class='about__link'>Success stories</a></li>
+                    <li><a href="#" class='about__link'>Partnership</a></li>
+                </ul>
+            </div>
+            <div class="fourth">
+                <h2>Need Help</h2>
+                <ul class='footer__list'>
+                    <li><a href="#" class='about__link'>Contact us</a></li>
+                    <li><a href="#" class='about__link'>Need Help</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
