--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -20,7 +20,7 @@
 
           <li sec:authorize="hasRole('ROLE_USER')">
           <li><a th:href="@{/login}">portfolio</a></li>
-          <li><a th:href="@{/register}">logout</a></li>
+          <li><a th:href="@{/logout}">logout</a></li>
           </li>
       </ul>
     </div>
